--- a/src/html/index.html
+++ b/src/html/index.html
@@ -6,7 +6,7 @@
   <title>esbuild testing</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <script type="module" src="/js/main.js"></script>
-  <link rel="stylesheet" href="/css/main.css" />
+  <link rel="stylesheet" href="/css/styles.css" />
 </head>
 
 <body>
