--- a/src/html/index.html
+++ b/src/html/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <title>esbuild testing</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <script type="module" src="/js/main.js"></script>
+  <script src="/js/main.bundle.js"></script>
   <link rel="stylesheet" href="/css/styles.css" />
 </head>
 
