--- a/src/html/index.html
+++ b/src/html/index.html
@@ -6,13 +6,13 @@
   <title>esbuild testing</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <script src="/js/main.bundle.js"></script>
-  <link rel="stylesheet" href="/css/styles.css" />
+  <link rel="stylesheet" href="/css/styles.bundle.css" />
 </head>
 
 <body>
 
   <header>
-    <h1>Realtime desssd</h1>
+    <h1>Realtime desssddd3</h1>
   </header>
 
   <main>
