--- a/src/html/index.html
+++ b/src/html/index.html
@@ -5,14 +5,14 @@
   <meta charset="UTF-8">
   <title>esbuild testing</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <script src="/js/main.bundle.js"></script>
-  <link rel="stylesheet" href="/css/styles.bundle.css" />
+  <script src="bundle.js"></script>
+  <link rel="stylesheet" href="bundle.css" />
 </head>
 
 <body>
 
   <header>
-    <h1>Realtime desssddd3</h1>
+    <h1>Realtime 3434</h1>
   </header>
 
   <main>
