--- a/src/html/index.html
+++ b/src/html/index.html
@@ -12,12 +12,12 @@
 <body>
 
   <header>
-    <h1>Realtime 3434</h1>
+    <h1>Realdtime 34dd343434</h1>
   </header>
 
   <main>
     <time class="clock"></time>
-    <star-icon fill="green"></star-icon>
+    <svg-icon name="star"></svg-icon>
   </main>
 
 </body>
