--- a/src/html/index.html
+++ b/src/html/index.html
@@ -12,12 +12,14 @@
 <body>
 
   <header>
-    <h1>Realdtime 34dd343434</h1>
+    <h1>New project</h1>
   </header>
 
   <main>
-    <time class="clock"></time>
-    <svg-icon name="star"></svg-icon>
+    <div>
+      <h3>Пример иконки</h3>
+      <svg-icon name="star"></svg-icon>
+    </div>
   </main>
 
 </body>
