--- a/src/html/index.html
+++ b/src/html/index.html
@@ -19,6 +19,7 @@
     <div>
       <h3>Пример иконки</h3>
       <svg-icon name="star"></svg-icon>
+      <counter-component></counter-component>
     </div>
   </main>
 
